--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 server.error.whitelabel.enabled=false
 spring.main.allow-bean-definition-overriding=true
+spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.base-dn=dc=landon,dc=org
+spring.ldap.embedded.port=8389
